# f1-counterfactual-decision-twin

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: DATA_FOUNDATION.md  DECISION_ENGINE.md  EVIDENCE_INTERFACE.md  PACE_MODEL.md  PROJECT_PLAN.md  ROADMAP.md  SIMULATOR.md  TECHNICAL_REPORT.md
docs/progress/: 00-inception.md  01-data-foundation.md  02-predictive-foundation.md  03-counterfactual-simulator.md  04-decision-engine.md  05-fuel-tyre-confound-fix.md  06-safety-car-restart-lap-fix.md  07-dutch-2023-rmse-diagnosis.md  08-tyre-cliff-investigation.md
docs/regulations/: tyre-compound-rule.md
src/apexmind/: __init__.py  baselines.py  benchmarks.py  cli.py  context.py  decision_engine.py  evaluation.py  evidence_interface.py  fastf1_source.py  manifest.py  pace_features.py  pace_model.py  paths.py  quality.py  race_state.py  regulations.py  replay.py  safety_car.py  simulator.py  viz.py
tests/: test_baselines.py  test_benchmarks.py  test_cli.py  test_context.py  test_decision_engine.py  test_evaluation.py  test_evidence_interface.py  test_pace_features.py  test_pace_model.py  test_paths.py  test_public_api.py  test_quality.py  test_race_state.py  test_regulations.py  test_replay.py  test_safety_car.py  test_simulator.py  test_viz.py
