[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apexmind"
version = "0.1.0"
description = "Offline, evidence-aware Formula 1 strategy research tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "formula-1",
    "motorsport",
    "race-strategy",
    "bayesian-inference",
    "monte-carlo-simulation",
    "data-science",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastf1>=3.8,<4",
    "pandas>=2.2,<3",
    "pyarrow>=16,<20",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.12,<1",
]
viz = [
    "matplotlib>=3.8,<4",
]

[project.scripts]
apexmind = "apexmind.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
